# M5StopWatch-UserDemo

./: .gitignore  CMakeLists.txt  README.md  fix_pmg0_wake_register_probe_raw_read.sh  int1.bmi270.pmg0.rtc_imu.gpio_num.esp_sleep.txt  m5pm1_pmg0_investigation_report.txt  partitions.csv  repos.json  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.cpp  secrets.h.example
main/apps/: apps.h
main/apps/app_alarm_clock/: app_alarm_clock.cpp  app_alarm_clock.h
main/apps/app_badge/: app_badge.cpp  app_badge.h
main/apps/app_configure/: app_configure.cpp  app_configure.h
main/apps/app_counter/: app_counter.cpp  app_counter.h
main/apps/app_fft/: app_fft.cpp  app_fft.h
main/apps/app_imu/: app_imu.cpp  app_imu.h
main/apps/app_launcher/: app_launcher.cpp  app_launcher.h
main/apps/app_lucky_wheel/: app_lucky_wheel.cpp  app_lucky_wheel.h
main/apps/app_setup/: app_setup.cpp  app_setup.h
main/apps/app_stopwatch/: app_stopwatch.cpp  app_stopwatch.h
main/apps/app_template/: app_template.cpp  app_template.h
main/apps/app_watch_face/: app_watch_face.cpp  app_watch_face.h
main/assets/: assets.h  icon_counter.c
main/hal/: hal.cpp  hal.h  hal.h.bmi270-pmg0-phase1.bak  hal.h.use-pmic-sleep-experiment.bak  hal_alarm.cpp  hal_audio.cpp  hal_badge.cpp  hal_button.cpp  hal_display.cpp  hal_fs.cpp  hal_imu.cpp  hal_imu.cpp.bmi270-pmg0-phase1.bak  hal_imu.cpp.software-sleep-production-baseline.bak  hal_ioe.cpp  hal_pmic.cpp  hal_pmic.cpp.pmg0-wake-timer-fallback.bak  hal_pmic.cpp.pmic-timer-wake.bak  hal_pmic.cpp.use-pmic-sleep-experiment.bak  hal_rtc.cpp
(+127 files in other folders)
